@@ -12,7 +12,8 @@ void ttHMultilepton::Variables::BootstrapTree(std::shared_ptr<top::TreeManager> 
   tree->makeOutputVariable(total_charge,  "total_charge");
   tree->makeOutputVariable(total_leptons, "total_leptons");
   tree->makeOutputVariable(isQMisIDEvent, "isQMisIDEvent");
-  tree->makeOutputVariable(isConvPhEvent, "isConvPhEvent");
+  tree->makeOutputVariable(isFakeEvent,   "isFakeEvent");
+  tree->makeOutputVariable(isLepFromPhEvent, "isLepFromPhEvent");
 
   //tree->makeOutputVariable(Mll01, "Mll01");
   format XXmn("%1%%2%%3%"), XXmno("%1%%2%%3%%4%"), XXmnop("%1%%2%%3%%4%%5%");
